2003-10-27  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-text-cache.c

	Fixed a char versus byte confusion that broke i18n text.

	* cong-editor-node-comment.c, cong-editor-node-text.c, cong-editor-widget.h, cong-editor-widget3.c, global.h, popup.c

	Initial support for GTK Input Methods; filter span tags using DTD if available; fixed Glade path for tags selection dialog

2003-10-26  Boris Goldowsky  <boris@alum.mit.edu>
 
	* cong-app.c, cong-dispspec-registry.c, cong-dispspec-registry.h
 
	If there is a gconf key specifying dispspec directories, 
	load them from there instead of using application's default directory. 

2003-10-25  Robert Varga <frozenfingers@xs4all.ro>

	* cong-location.h
       
	gtk-doc comments.
	
2003-10-24  Geert-Jan Van den Bogaerde <gvdbogaerde@pandora.be>

	* cong-location.c

	Made moving the cursor to the right move through tags just like cursor movement to the left (bug #125341).

2003-10-24  Jeff Martin <jeff@custommonkey.org>

	* Makefile.am cong-app.c cong-fake-plugin-hooks.h plugin-doc-from-xds.c plugin-templates.c

	Replaced doc-from-xds plugin with template plugin

2003-10-23  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-command.c, cong-editor-widget3.c

	Fixes for deletion of selection for new selection semantics
	
	* cong-node.c, cong-node.h, cong-range.c, cong-range.h, xmledit.c

	Bulletproofing for clipboard operations
	
	* cong-command.c, cong-editor-node-text.c, cong-selection.h

	Fixed warnings
	
	* cong-font.c

	Removed last traces of GdkFont

2003-10-22  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-source-view.c, cong-tree-view.c, cong-util.c

	Fixes for warnings
	
	* cong-location.c, cong-location.h, cong-node.c, cong-node.h, cong-range.c

	Enhancements of CongLocation and CongRange to match selection semantics change, and to support Edit->Copy of selected node
	
	* cong-editor-area.c

	Fixed typo
	
	* cong-eel-graphic-effects.c

	Fixed header filename
	